--- a/src/components/App/App.pcss
+++ b/src/components/App/App.pcss
@@ -26,3 +26,10 @@ p{
 .penguinHighlight{
     color: #00aae6;
 }
+
+.friends{
+    clear: fix-legacy;
+    max-width: 325px;
+    display: block;
+    margin: 40px auto;
+}
