Updates to story

--- a/src/components/App/App.pcss
+++ b/src/components/App/App.pcss
@@ -31,5 +31,9 @@ p{
     clear: fix-legacy;
     max-width: 325px;
     display: block;
-    margin: 40px auto;
+    margin: 70px auto 30px;
+}
+
+.penguinOnPath{
+    clear: fix-legacy;
 }
