--- a/src/components/App/App.pcss
+++ b/src/components/App/App.pcss
@@ -27,6 +27,10 @@ p{
     color: #00aae6;
 }
 
+.rhinoHighlight{
+    color: #3a9946;
+}
+
 .friends{
     clear: fix-legacy;
     max-width: 325px;
@@ -34,6 +38,6 @@ p{
     margin: 70px auto 30px;
 }
 
-.penguinOnPath{
+.penguinOnPath, .transformation{
     clear: fix-legacy;
 }
