--- a/src/components/Penguin/Penguin.pcss
+++ b/src/components/Penguin/Penguin.pcss
@@ -25,6 +25,7 @@
     box-sizing: border-box;
     padding-left: 10px;
     outline: none;
+    font-family: 'Lato', sans-serif;
 
     &:focus{
         color: lighten(black, 10%);
