--- a/src/components/Rhino/Rhino.pcss
+++ b/src/components/Rhino/Rhino.pcss
@@ -1,11 +1,12 @@
 .container{
+    width: 260px;
     position: relative;
     display: inline-block;
     margin-left: -80px;
 }
 
 .rhino{
-    width: 260px;
+    width: 100%;
     height: auto;
 }
 
@@ -25,6 +26,7 @@
     box-sizing: border-box;
     outline: none;
     margin-left: 140px;
+    font-family: 'Lato', sans-serif;
 
     &:focus{
         color: lighten(black, 10%);
