--- a/src/components/Fly/Fly.pcss
+++ b/src/components/Fly/Fly.pcss
@@ -1,12 +1,13 @@
 .container{
-    position: relative;
-}
-
-.fly{
     width: 60px;
     margin-top: -150px;
     margin-left: 220px;
     margin-bottom: 100px;
+    position: relative;
+}
+
+.fly{
+    width: 100%;
     display: block;
 }
 
@@ -19,8 +20,9 @@
     font-size: 16px;
     box-sizing: border-box;
     outline: none;
-    right: 50px;
+    right: 4px;
     position: absolute;
+    font-family: 'Lato', sans-serif;
 
     &:focus{
         color: lighten(black, 10%);
