--- a/src/components/Shaman/Shaman.pcss
+++ b/src/components/Shaman/Shaman.pcss
@@ -1,5 +1,11 @@
-.shaman{
+.shaman, .shamanSwitched{
     width: 300px;
     margin: 40px auto;
     display: block;
+}
+
+.shamanSwitched{
+    transform: scaleX(-1);
+    width: 170px;
+    float: left;
 }
