Bunch of more adds

--- a/src/components/App/App.pcss
+++ b/src/components/App/App.pcss
@@ -41,3 +41,45 @@ p{
 .penguinOnPath, .transformation{
     clear: fix-legacy;
 }
+
+.plus, .endBracket{
+    display: block;
+    font-family: 'Lato', sans-serif;
+    font-size: 50px;
+    float: left;
+    color: #49C4D8;
+    margin-top: 100px;
+    margin-left: 50px;
+}
+
+.endBracket{
+    margin-left: 30px;
+}
+
+.finalPenguinContainer{
+    clear: fix-legacy;
+    width: 65%;
+    display: block;
+    margin: 0 auto;
+}
+
+.stars, .starsReversed{
+    width: 150px;
+    height: 280px;
+    float: left;
+    margin-top: 60px;
+    background-size: contain;
+    background-image: url('../../images/stars.svg');
+}
+
+.starsReversed{
+    transform: scaleX(-1);
+    margin-left: 40px;
+}
+
+.lastNode{
+    max-width: 500px;
+    display: block;
+    margin: 40px auto;
+    clear: fix-legacy;
+}
