--- a/src/components/Frog/Frog.pcss
+++ b/src/components/Frog/Frog.pcss
@@ -1,5 +1,8 @@
 .container{
     width: 200px;
+    float: left;
+    margin-top: 40px;
+    margin-left: 40px;
     position: relative;
 }
 
@@ -12,5 +15,8 @@
     position: absolute;
     font-size: 40px;
     bottom: 35px;
-    left: 92px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    padding-left: 5px;
 }
