Just a few little adds

--- a/src/components/App/App.pcss
+++ b/src/components/App/App.pcss
@@ -83,3 +83,28 @@ p{
     margin: 40px auto;
     clear: fix-legacy;
 }
+
+.nextPath{
+    clear: fix-legacy;
+    margin: 50px 0;
+}
+
+.nextFriends{
+    clear: fix-legacy;
+    width: 200px;
+    float: left;
+    margin-left: 15%;
+}
+
+.nextShaman{
+    background-size: contain;
+    background-image: url('../../images/final-node.svg');
+    width: 300px;
+    display: block;
+    float: right;
+    height: 196px;
+}
+
+.clear{
+    clear: both;
+}
