--- a/src/components/App/overrides/nextPathPenguin.pcss
+++ b/src/components/App/overrides/nextPathPenguin.pcss
@@ -1,11 +1,16 @@
 .container{
-    transform: scaleX(-1);
+    float: left;
     width: 110px !important;
     margin: 0 !important;
 }
 
+.penguin{
+    transform: scaleX(-1);
+}
+
 .number{
+    z-index: 2;
     bottom: 60px !important;
-    left: 13px !important;
+    left: 0 !important;
     font-size: 50px !important;
 }
