--- a/src/components/App/App.pcss
+++ b/src/components/App/App.pcss
@@ -105,6 +105,37 @@ p{
     height: 196px;
 }
 
+.firstExercise, .finalTest{
+    clear: both;
+}
+
+.finalTest{    
+    width: 600px;
+    margin: 50px auto;
+    clear: fix-legacy;
+}
+
 .clear{
     clear: both;
+}
+
+.tick, .cross{
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    background-size: contain;
+}
+
+.tick{
+    background-image: url('../../images/tick.svg');
+}
+
+.cross{
+    background-image: url('../../images/cross.svg');
+}
+
+.answer{
+    float: left;
+    margin-left: 70px;
+    margin-top: 70px;
 }
