Adding multipath stuff and handling for correct frog-penguin comparison

--- a/src/components/App/App.pcss
+++ b/src/components/App/App.pcss
@@ -127,7 +127,13 @@ p{
 }
 
 .tick{
+    z-index: 2;
+    opacity: 0;
     background-image: url('../../images/tick.svg');
+
+    &.active{
+        opacity: 1;
+    }
 }
 
 .cross{
