--- a/src/components/App/App.pcss
+++ b/src/components/App/App.pcss
@@ -145,3 +145,14 @@ p{
     margin-left: 70px;
     margin-top: 70px;
 }
+
+.multiContainer{
+    width: 400px;
+    float: left;
+    clear: both;
+    margin-bottom: 30px;
+}
+
+.finalShaman{
+    margin-top: -120px;
+}
