--- a/src/components/Rhino/Rhino.pcss
+++ b/src/components/Rhino/Rhino.pcss
@@ -3,6 +3,10 @@
     position: relative;
     display: inline-block;
     margin-left: -80px;
+
+    &.active{
+        animation: pulse 1s infinite;
+    }
 }
 
 .rhino{
@@ -30,5 +34,20 @@
 
     &:focus{
         color: lighten(black, 10%);
+    }
+}
+
+
+@keyframes pulse{
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.1);
+    }
+
+    100% {
+        transform: scale(1);
     }
 }
