--- a/src/components/App/App.pcss
+++ b/src/components/App/App.pcss
@@ -158,6 +158,32 @@ p{
     margin-top: -120px;
 }
 
+.path{
+    width: 400px;
+    height: 28px;
+    margin-left: -80px;
+    margin-top: 30px;
+    background-repeat: no-repeat;
+    background-image: url('../../images/single_path.svg');
+}
+
+.firstPathImage{
+    width: 400px;
+    height: 150px;
+    margin-left: 160px;
+    margin-top: 120px;
+    background: url('../../images/multi_path.svg') no-repeat;
+}
+
+.secondPathImage{
+    width: 400px;
+    height: 150px;
+    margin-top: -30px;
+    margin-left: 160px;
+    transform: scaleY(-1);
+    background: url('../../images/multi_path.svg') no-repeat;
+}
+
 @keyframes pulse{
     0% {
         transform: scale(1);
