Last of the main goodies

--- a/src/components/App/App.pcss
+++ b/src/components/App/App.pcss
@@ -184,6 +184,13 @@ p{
     background: url('../../images/multi_path.svg') no-repeat;
 }
 
+.manyPenguins{
+    max-width: 700px;
+    height: auto;
+    margin: 50px auto;
+    display: block;
+}
+
 @keyframes pulse{
     0% {
         transform: scale(1);
