--- a/src/components/Formals/Formals.pcss
+++ b/src/components/Formals/Formals.pcss
@@ -10,3 +10,38 @@
     padding-bottom: 20px;
     border-bottom: 1px solid #727272;
 }
+
+.formalList{
+    padding: 0;
+    margin: 0;
+
+    li{
+        list-style: none;
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 50px;
+
+        & > div:first-child {
+            flex: 1 25%;
+        }
+
+        & > div:last-child {
+            flex: 1 75%;
+        }
+    }
+}
+
+.descTitle{
+    font-family: 'Lato', sans-serif;
+    text-transform: uppercase;
+    font-size: 30px;
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+
+.subtitle{
+    margin-top: 0;
+    text-transform: uppercase;
+    font-family: 'Lato', sans-serif;
+    color: lighten(#a1a1a1, 10%);
+}
